--- a/researchf/package.json
+++ b/researchf/package.json
@@ -61,5 +61,6 @@
   "devDependencies": {
     "redux-devtools-extension": "^2.13.8",
     "sass": "^1.29.0"
-  }
+  },
+  "proxy":"http://localhost:8001/"
 }
