--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "jquery": "^3.7.1",
     "multer": "^1.4.4",
     "mysql2": "^3.6.0",
     "nodemon": "^3.0.1"
